# proyectoparalelo

./: .gitignore  README.md
imagenParalelo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  maquinas.txt  programa
imagenParalelo/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
imagenParalelo/nbproject/private/: private.xml
